--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=5000
 NODE_ENV=development
+MONGODB_URL=mongodb+srv://secondsteveoyebamiji:Oluwatobi90210$@workout-api.j3obg.mongodb.net/?retryWrites=true&w=majority&appName=workout-api
